css/software.css
/* General stuff for everywhere */
:root {
    --primary: #50a3c4;
    --primary-rgb: 80, 163, 196;
    --primary-light: #6cc7eaa3;
    --primary-light-rgb: 161, 219, 241;
    --primary-light-dm: #5791a7;
    --primary-light-dm-rgb: 87, 145, 167;
    --primary-dark: #186280;
    --link-color: #005eff;
}

body,
html {
    width: 100%;
    height: 100%;
    font-size: 20px;
}

body {
    font-family: 'Lato', sans-serif;
    transition: 500ms;
    overflow-x: hidden;
}

.hide {
    display: none;
}

.dotsep::before {
    padding: 0px 10px;
    content: '•';
}

a,
a.nav-link {
    color: var(--link-color);
    text-decoration: none;
    transition: 0.3s;
}

a:hover,
a.nav-link:hover {
    color: var(--primary-dark);
}

header h1 {
    font-weight: 700;
    font-size: 50px;
}

/* footer styling */
footer.footer .social-link {
    transition: 300ms ease-in-out;
    box-shadow: 0px 3px 3px 0 rgba(0, 0, 0, 0.25);
    cursor: pointer;
}

footer.footer .social-link.fa-github {
    border-radius: 100%;
}

footer.footer .social-link.fa-linkedin,
footer.footer .social-link.fa-twitter-square {
    border-radius: 10px;
    line-height: 50px;
}

footer.footer .social-link:hover {
    background-color: var(--primary-light);
    text-decoration: none;
    box-shadow: none;
    transform: translateY(3px);
}

footer.footer .social-link:active {
    background-color: var(--primary);
}

.text-bg-primary {
    background-color: var(--primary)!important;
    color: white;
}

.btn.btn-primary {
    background-color: var(--primary);
    border: none;
}

.btn.btn-primary:hover {
    background-color: var(--primary-dark);
}

.btn.btn-primary:active,
.btn.btn-primary.active {
    background-color: var(--primary-dark);
}

.btn.btn-outline-primary {
    background-color: none;
    border: 2px solid var(--primary);
}

.btn.btn-outline-primary:hover {
    background-color: var(--primary);
}

.btn.btn-outline-primary:active {
    background-color: var(--primary);
}

.dark .tooltip-inner {
    background: white;
    color: black;
}

.dark .tooltip-arrow::before {
    border-top-color: white;
}

.rounded-box {
    border-radius: 20px;
    background-color: var(--primary-light);
    padding: 1rem;
    position: relative;
}

.header-number {
    --size: 3rem;
    position: absolute;
    background-color: var(--primary-dark);
    font-size: 30px;
    font-weight: bold;
    text-align: center;
    line-height: var(--size);
    width: var(--size);
    height: var(--size);
    color: white;
    right: calc(-0.2 * var(--size));
    top: calc(-0.2 * var(--size));
    border-radius: 100%;
}

.header-desc {
    font-size: 16px;
    font-style: italic;
}

.header-title {
    font-weight: bold;
}

#left-col,
#right-col {
    transition: 800ms;
}

#expand {
    border-radius: 100%;
}

.shadow-scroll {
    --bg: rgb(var(--primary-light-rgb));
    --bgTrans: rgba(var(--primary-light-rgb), 0);
    
    --shadow: rgba(0, 0, 0, 0.5);

    background:
    /* Shadow Cover TOP */
    linear-gradient(
      var(--bg) 30%,
      var(--bgTrans)
    ) center top,
    
    /* Shadow Cover BOTTOM */
    linear-gradient(
      var(--bgTrans), 
      var(--bg) 70%
    ) center bottom,
    
    /* Shadow TOP */
    radial-gradient(
      farthest-side at 50% 0,
      var(--shadow),
      rgba(0, 0, 0, 0)
    ) center top,
    
    /* Shadow BOTTOM */
    radial-gradient(
      farthest-side at 50% 100%,
      var(--shadow),
      rgba(0, 0, 0, 0)
    ) center bottom;
  
    background-repeat: no-repeat;
    background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;
    background-attachment: local, local, scroll, scroll;
}

#software-list {
    overflow: scroll;
    max-height: 300px;
}

body.dark #software-list {
    --bg: rgb(var(--primary-light-dm-rgb));
}

.software-item {
    padding: 0.5rem;
}

.software-logo {
    height: 2rem;
    border-radius: 0.25rem;
    max-width: 100%;
}

.software-no-logo-text {
    line-height: 2rem;
    font-weight: bold;
}

body.dark #acknowledgement,
body.dark #bibtex {
    background-color: #333;
    color:white;
    --bg: rgb(#333);
    --bgTrans: rgba(51, 51, 51, 0);
}

#acknowledgement,
#bibtex {
    background-color: white;
    color: black;
    font-size: 16px;

    --bg: rgb(255, 255, 255);
    --bgTrans: rgba(255, 255, 255, 0);
}

.corner-button {
    position: absolute;
    right: -1px;
    top: -1px;
    border-radius: 0;
    font-size: 14px !important;
    border-bottom-left-radius: 18px;
    border-top-right-radius: 20px;
    z-index: 100;
}

#bibtex-wrapper {
    position: relative;
}

#bibtex-wrapper .corner-button {
    top: 0;
    right: 0;
}

#acknowledgement {
    white-space: preserve-breaks;
    overflow-x: clip;
}

#bibtex {
    max-height: 200px;
    overflow-y: scroll;
}

/* #bibtex-wrapper:after {
    content: '';
    position: absolute;
    z-index: 1;
    bottom: 0;
    left: 0;
    pointer-events: none;
    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), white 90%);
    width: 100%;
    height: 5em;
}

body.dark #bibtex-wrapper:after {
    content: '';
    position: absolute;
    z-index: 1;
    bottom: 0;
    left: 0;
    pointer-events: none;
    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #333 90%);
    width: 100%;
    height: 5em;
} */

.bibtex-format {
    color: #c7265f;
}

.bibtex-key {
    color: #85b12a;
}

.bibtex-type {
    color: #c7265f;
}

.bibtex-field {
    color: #85b12a;
}

.latex-command {
    color: #c7265f;
}

.latex-refs {
    color: #9e86c8;
}

pre {
    margin: 0;
}

.animate__animated.animate__bounceOut {
    --animate-duration: 0.8s;
}

.details-logo {
    max-height: 100px;
    max-width: calc(18rem - 2 * var(--bs-tooltip-padding-x));
}

.tooltip {
    --bs-tooltip-max-width: 18rem;
}

.version-card {
    height: 100%;
}

.version-card .card-controls {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.version-button {
    font-size: 0.8rem;
    font-weight: bold;
}

.version-select {
    font-size: 0.7rem;
}

.feature-btn {
    font-size: 0.7rem;
}

#subpackages-modal .form-control,
#subpackages-modal .form-label,
#subpackages-modal .btn-sm {
    font-size: 0.7rem;
}

.headshot {
    border-radius: 100%;
    max-width: 200px;
    max-height: 200px;
    border: 10px solid var(--primary);
}

.headshot-box {
    cursor: pointer;
    transition: 0.3s;
}

.headshot-box:hover {
    transform: scale(1.05);
}

.new-software-form,
.new-software-form .btn,
.new-software-form .form-control,
.new-software-form .form-select.form-select-sm {
    font-size: 0.7rem;
}

.form-control-box.required .form-label:after {
    content: '*';
    color: red;
}

.form-label {
    margin-bottom: 0.25rem;
}

.character-count {
    position: absolute;
    background-color: rgba(128, 128, 128, 0.75);
    color: white;
    bottom: 0;
    right: 0.1rem;
    font-size: 0.5rem;
    padding: 0.2rem;
    border-radius: 0.5rem;
    margin: 0.2rem;
}

.character-count.nearly-full {
    background-color: #ffcc00;
    color: black;
}

.character-count.full {
    background-color: red;
    color: white;
}

.overlay {
    position: absolute;
    left: 0px;
    right: 0px;
    top: 0px;
    bottom: 0px;
    background-color: rgba(255, 255, 255, 0.8);
    z-index: 100;
}

body.dark .overlay {
    background-color: rgba(51, 51, 51, 0.8);
}

.animate__animated.animate__fadeIn {
    --animate-duration: 0.3s;
}

#new-software-citation {
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    overflow-x:hidden;
}

#new-software-citation .overlay {
    transition: 300ms;
    opacity: 0;
    text-align: center;
    font-family: var(--bs-font-sans-serif);
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
}

#new-software-citation:hover .overlay {
    opacity: 1;
}

#toaster {
    bottom: 0;
    right: 0;
    padding: 1rem;
}

#new-software-dependencies {
    border: 1px solid var(--bs-border-color);
    border-radius: 0.25rem;
    padding: 0.3rem;
}

.dependency-toggle {
    cursor: pointer;
    transition: 300ms;
    margin-right: 0.2rem;
    margin-bottom: 0.1rem;
}

.dependency-toggle:hover {
    filter: brightness(0.8);
}

